==2011-05==
* Implemented canvas printing
* Disabled printing for emulation window
* Improved CanvasView so it updates the canvas on initialization
* Improved device mount logic: all storages are first tried for available, if none is available, the first is selected for remounting
* Implemented multi-storage devices
* Improved overlay
* Improved OpenGLCanvas configuration logic
* Implemented paper canvas postImage
* Implemented OEImage overlay and clipping
* Implemented paper canvas update when paper size changes
* Fixed paper canvas size getting stuck
* Implemented CanvasView paper scrolling
* Defined paper vertical clip region
* Added OpenGL paper canvas page separator
* Updated device count in emulation window
* Fixed PAAudio when playing a sound twice
* Fixed OpenGL paper canvas borders
* Implemented OpenGL paper canvas pixel density
* Finished OpenGL paper canvas
* Fixed video update when shaders are off
* Fixed resize flickering when using didVSync for drawing
* Fixed bezel drawing
* Fixed window resizing methods
* Fixed display canvas updates, so persistency is correctly updated after a new frame
* Implemented OpenGL paper canvas
* Added paper canvas to CanvasWindowController and CanvasWindow
* Refactored canvas API

==2011-04==
* Fixed bezel 180 degree rotation
* Fixed persistance
* Fixed OpenGLCanvas update parameters and canvas API
* Fixed OpenGL context loss when closing a canvas
* Fixed GUI-Emulation-Canvas thread synchronization
* Improved the default emulation fallback, the template chooser is now displayed
* Fixed audio playback play position
* Fixed canvas window orderOut
* Fixed frame size initialization
* Fixed OpenGL thread sync
* Fixed system events in canvas and emulation windows
* Fixed canvas API, so one can now post frames from the update callback
* Added support for storing default emulation window size
* Implemented persistance with render buffers
* Fixed problem when rendering on large screens
* Implemented power/pause/capture bezel