@@ -289,8 +289,8 @@ void Monitor::notify(OEComponent *sender, int notification, void *data)
 		 device->postMessage(this, DEVICE_DESTROY_CANVAS, &canvas);
 		 }
 		 */
-		
-/*		int *p = (int *)image.getPixels();
+		/*
+		int *p = (int *)image.getPixels();
 		if (p)
 		{
 			int w = image.getSize().width;
@@ -308,10 +308,10 @@ void Monitor::notify(OEComponent *sender, int notification, void *data)
 		*/
 		return;
 	}
-/*	
+	
 	if (notification != CANVAS_DID_VSYNC)
 		return;
-
+	/*
 	int *p = (int *)image.getPixels();
 	if (p)
 	{
@@ -326,7 +326,8 @@ void Monitor::notify(OEComponent *sender, int notification, void *data)
 		
 		if (canvas)
 			canvas->postMessage(this, CANVAS_POST_IMAGE, &image);
-	}*/
+	}
+	*/
 }
 
 void Monitor::updateVideoRect()
